// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a new order 1`] = `
Object {
  "_id": "mocked-order-_id",
  "address": Object {
    "_id": "mocked-address-id",
    "number": 10,
    "postcode": "098765",
    "street": "Mocked street",
  },
  "customerName": "Tiago",
  "id": "mocked-order-id",
  "price": 10.5,
}
`;

exports[`should edit an order 1`] = `
Object {
  "__v": 0,
  "_id": "mocked-order-_id",
  "address": Object {
    "_id": "mocked-address-id",
    "number": 100,
    "postcode": "123456",
    "street": "Edited Mocked street",
  },
  "customerName": "Tiago",
  "id": "mocked-order-id",
  "price": 10.5,
}
`;
